# sofia

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SDK_PUBLISHING_QUICKSTART.md  main.py  mintlify.docs.json  pyproject.toml  scratchpad.dump
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE
.github/workflows/: base-image.yml  cd-sdk.yml  ci-sdk.yml  gh-pages.yml  lint-and-typecheck.yml  lint-n-type.yml  npm-publish.yml  publish-sdk.yml  publish.yml  sdk-ts-test.yml  test.yml
cookbook/: wikibase_agent.ipynb
docs/: CNAME  DOCUMENTATION_PLAN.md  README.md  SDK_PUBLISHING_GUIDE.md  Showcase.mdx  cli-usage.md  cli-usage.mdx  community.md  community.mdx  configuration.md  configuration.mdx  contributing-guidelines.mdx  deployment.md  deployment.mdx  docs.json  examples.md  examples.mdx  faq.mdx  flow-management.md  flow-management.mdx  flow_construct.md  flows.mdx  getting-started.md  getting-started.mdx  index.html  index.mdx  intro.mdx  introduction.mdx  kosmos.mdx  llm-support.md  llm-support.mdx  mockllm_profiling.md  observability.mdx  package-lock.json  package.json  philosophy.mdx  privacy-policy.mdx  start.mdx  support.mdx  terms-of-service.mdx  (+2 more)
docs-site/: next.config.js  package-lock.json  package.json  theme.config.js
docs-site/pages/: deployment.mdx  examples.mdx  flows.mdx  getting-started.mdx  index.mdx  llm.mdx  usage.mdx
docs/app/: layout.config.tsx
docs/building-blocks/: flows.mdx  llm-support.mdx  steps.mdx
docs/community/: contributing.mdx  index.mdx  showcase.mdx
docs/dev-deploy/: cli-usage.mdx  configuration.mdx  deployment.mdx
docs/developer/: README.md  agent-design.md  collaboration.md  eli5.md  roadmap.md  tldr.md  vision-inspiration.md
docs/docs/: README.md  package-lock.json
docs/guides/: index.mdx
docs/md/: cli-usage.md  configuration.md
docs/nomos/: architecture.mdx  philosophy.mdx  vs-other-frameworks.mdx
docs/qa/: observability.mdx  testing-evaluation.mdx  testing.mdx
docs/sofia-agent/: mdx-components.tsx  package-lock.json  package.json
docs/tools/: external-tools.mdx  index.mdx  introduction.mdx  security-best-practices.mdx
examples/: barista.py  barista_with_config.py  flow_demo.py
examples/barista/: barista.py  barista_tools.py  barista_with_config.py  config.barista.yaml
examples/financial-advisor/: Dockerfile  __init__.py  config.agent.yaml  conftest.py  test_agent.py  tools.py
examples/general-bot/: config.agent.yaml
examples/git-search/: config.agent.yaml  git_search.py
examples/prod-ready/: Dockerfile  __init__.py  agent.py  docker-compose.yml  main.py  requirements.txt  tools.py
examples/travel-itinery-planner/: Dockerfile  config.agent.yaml  tools.py
examples/typescript-sdk-example/: QUICKSTART.md  README.md  package-lock.json  simple-example.js  test-examples.sh
nomos/: __init__.py  cli.py  config.py  constants.py  core.py  generator.py  server.py  state_machine.py  types.py
nomos/api/: __init__.py  agent.py  app.py  db.py  models.py  session_store.py  yaml_to_mermaid.py
nomos/llms/: __init__.py  anthropic.py  base.py  google.py  huggingface.py  mistral.py  ollama.py  openai.py
nomos/mcp/: __init__.py  client.py
nomos/memory/: __init__.py  base.py  flow.py  summary.py
nomos/models/: __init__.py  agent.py  flow.py  mcp.py  tool.py
nomos/templates/: config.agent.yaml.j2
nomos/testing/: __init__.py  e2e.py  eval.py  yaml_runner.py  yaml_tests.py
nomos/utils/: __init__.py  flow_utils.py  generator.py  logging.py  misc.py  tracing.py  utils.py
scripts/: profile_mock_llm.py
sdk/ts/: .eslintrc.cjs  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
sofia/: config.py  core.py  llms.py  models.py  tool.py  utils.py
sofia/models/: __init__.py  flow.py  tool.py
sofia/utils/: logging.py
sofia_agent/: __init__.py  cli.py  config.py  constants.py  core.py  llms.py  types.py
sofia_agent/llms/: __init__.py  base.py  google.py  mistral.py  openai.py
sofia_agent/memory/: __init__.py  base.py  summary.py
sofia_agent/models/: __init__.py  flow.py  tool.py
sofia_agent/utils/: __init__.py  logging.py  otel.py  tracing.py  utils.py
support/playground/: compose.yaml
support/schemas/: .nomos.json
support/ts-sdk/: package-lock.json  package.json
tests/: conftest.py  test_async.py  test_async_tools.py  test_cli.py  test_core.py  test_flow.py  test_flow_construct.py  test_flow_utils.py  test_generator.py  test_mcp.py  test_mcp_integration.py  test_memory.py  test_model.py  test_models.py  test_scenario_runner.py  test_session_store_import.py  test_state_machine.py  test_tracing.py  test_utils.py  test_yaml_to_mermaid.py
tools/: VISUAL_BUILDER_PLAN.md
ts-lib/: package-lock.json  package.json  tsconfig.json
(+358 files in other folders)
