[project]
name = "nomos"
version = "0.1.15"
description = "Configurable multi-step agent framework for building advanced LLM-powered assistants"
authors = [
    {name = "chandralegend",email = "irugalbandarachandra@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "docstring-parser (>=0.16,<0.17)",
    "tiktoken (>=0.9.0,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
cli = [
    "typer (>=0.16.0,<0.17.0)",
    "rich (>=13.0.0,<14.0.0)",
    "docker (>=7.1.0,<8.0.0)",
]
openai = [
    "openai (>=1.76.0,<2.0.0)",
]
mistralai = [
    "mistralai (>=1.7.0,<2.0.0)",
]
gemini = [
    "google-genai (>=1.12.1,<2.0.0)",
]
traces = [
    "opentelemetry-api (>=1.33.0,<2.0.0)",
    "opentelemetry-sdk (>=1.33.0,<2.0.0)",
    "opentelemetry-instrumentation (>=0.54b0,<0.55)",
    "opentelemetry-exporter-otlp (>=1.33.0,<2.0.0)",
]

[project.scripts]
nomos = "nomos.cli:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=nomos --cov-report=term-missing"
testpaths = [
    "tests",
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.26.0"
sqlmodel = "^0.0.24"
redis = "^6.0.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pre-commit = "^4.2.0"
